--- a/AppPundits.ParkingApp/index.html
+++ b/AppPundits.ParkingApp/index.html
@@ -65,22 +65,7 @@
     <script src="app/config.exceptionHandler.js"></script>
     <script src="app/config.route.js"></script>
 
-    <!-- common Modules -->
-    <script src="app/common/common.js"></script>
-    <script src="app/common/logger.js"></script>
-    <script src="app/common/spinner.js"></script>
-
-    <!-- common.bootstrap Modules -->
-    <script src="app/common/bootstrap/bootstrap.dialog.js"></script>
-
     <!-- app -->
-    <script src="app/admin/admin.js"></script>
-    <script src="app/dashboard/dashboard.js"></script>
-    <script src="app/layout/shell.js"></script>
-    <script src="app/layout/sidebar.js"></script>
-
-    <!-- app Services -->
-    <script src="app/services/datacontext.js"></script>
-    <script src="app/services/directives.js"></script>
+    <script src="app/all.min.js"></script>
 </body>
 </html>
