changes to contents

--- a/AppPundits.ParkingApp/app/dashboard/dashboard.html
+++ b/AppPundits.ParkingApp/app/dashboard/dashboard.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="today-datas">
-                        <li class="blightblue">
+                        <!--<li class="blightblue">
                             <div class="pull-left"><i class="fa fa-plane"></i></div>
                             <div class="datas-text pull-right">
                                 <span class="bold">May 18 - 19, 2015</span> Castle Resort, Neverland
@@ -18,7 +18,7 @@
                                 <span class="bold">{{vm.messageCount}}</span> Messages
                             </div>
                             <div class="clearfix"></div>
-                        </li>
+                        </li>-->
 
                     </ul>
                 </div>
@@ -26,16 +26,18 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="widget wviolet">
-                        <div data-cc-widget-header title="People"
+                        <div data-cc-widget-header title="Infringement"
                              allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
                             <table class="table table-condensed table-striped">
                                 <thead>
                                     <tr>
-                                        <th>First Name</th>
-                                        <th>Last Name</th>
-                                        <th>Age</th>
-                                        <th>Location</th>
+                                        <th>Breach No</th>
+                                        <th>Car Registration</th>
+                                        <th>City</th>
+                                        <th>Car Parking</th>
+                                        <th>Breach Date</th>
+                                        <th>Extra Amount</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -43,6 +45,8 @@
                                         <td>{{p.firstName}}</td>
                                         <td>{{p.lastName}}</td>
                                         <td>{{p.age}}</td>
+                                        <td>{{p.location}}</td>
+                                        <td>{{p.location}}</td>
                                         <td>{{p.location}}</td>
                                     </tr>
                                 </tbody>
@@ -53,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <!--<div class="col-md-6">
                     <div class="widget wgreen">
                         <div data-cc-widget-header title="{{vm.news.title}}"
                              allow-collapse="true"></div>
@@ -64,7 +68,7 @@
                             <div class="clearfix"></div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
