--- a/AppPundits.ParkingApp/index.html
+++ b/AppPundits.ParkingApp/index.html
@@ -33,7 +33,7 @@
 <body>
     <div>
         <div data-ng-include="'/app/layout/shell.html'"></div>
-        <div id="splash-page" data-ng-show="false">
+        <!--<div id="splash-page" data-ng-show="false">
             <div class="page-splash">
                 <div class="page-splash-message">
                     Hot Towel Angular
@@ -42,7 +42,7 @@
                     <div class="bar"></div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 
     <span data-cc-scroll-to-top></span>
