--- a/AppPundits.ParkingApp/app/settings/settings.html
+++ b/AppPundits.ParkingApp/app/settings/settings.html
@@ -1,10 +1,30 @@
 ﻿<section id="settings-view" class="mainbar" data-ng-controller="settings">
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Add Car Type</h4>
+        </div>
+        <div class="modal-body">
+            <div class="form-group">
+                <label for="carmake" class="control-label">Car Make:</label>
+                <input type="text" ng-model="cartype.Make" class="form-control" id="carmake">
+            </div>
+            <div class="form-group">
+                <label for="carmodel" class="control-label">Car Model:</label>{{cartype.Model}}
+                <input type="text" ng-model="cartype.Model" class="form-control" id="carmodel">
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary" ng-click="ok()">Save</button>
+            <button type="button" class="btn btn-default" ng-click="cancel()">Close</button>
+        </div>
+    </script>
     <section class="matter">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="widget wviolet">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Car Type</button>
+                        <button type="button" class="btn btn-info btn-lg" ng-click="openaddcar()">Add Car Type</button>
                         <div data-cc-widget-header title="Car Types">
                         </div>
                         <div class="widget-content text-info">
@@ -44,11 +64,11 @@
                             <div class="modal-body">
                                 <div class="form-group">
                                     <label for="carmake" class="control-label">Car Make:</label>
-                                    <input type="text" ng-model="carmake" class="form-control" id="carmake" placeholder="Toyota" required>
+                                    <input type="text" ng-model="testmake" class="form-control" id="carmake" placeholder="Toyota" required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="carmodel" class="control-label">Car Model:</label>
-                                    <input type="text" ng-model="carmodel" class="form-control" id="carmodel" placeholder="Hilux" required>
+                                    <label for="carmodel" class="control-label">Car Model:</label>{{carmodel}}
+                                    <input type="text" ng-model="testmodel" class="form-control" id="carmodel" placeholder="Hilux" required>
                                 </div>
                             </div>
                             <div class="modal-footer">
