--- a/AppPundits.ParkingApp/app/settings/settings.html
+++ b/AppPundits.ParkingApp/app/settings/settings.html
@@ -1,22 +1,14 @@
 ﻿<section id="settings-view" class="mainbar" data-ng-controller="settings">
     <script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Add Car Type</h4>
+            <h3 class="modal-title">Are you sure?</h3>
         </div>
         <div class="modal-body">
-            <div class="form-group">
-                <label for="carmake" class="control-label">Car Make:</label>
-                <input type="text" ng-model="cartype.Make" class="form-control" id="carmake">
-            </div>
-            <div class="form-group">
-                <label for="carmodel" class="control-label">Car Model:</label>{{cartype.Model}}
-                <input type="text" ng-model="cartype.Model" class="form-control" id="carmodel">
-            </div>
+            <p>Do you want to delete the car type?</p>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" ng-click="ok()">Save</button>
-            <button type="button" class="btn btn-default" ng-click="cancel()">Close</button>
+            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
         </div>
     </script>
     <section class="matter">
@@ -27,13 +19,14 @@
                         <button type="button" class="btn btn-info btn-lg" ng-click="openaddcar()">Add Car Type</button>
                         <div data-cc-widget-header title="Car Types">
                         </div>
-                        <div class="widget-content text-info">
+                        <div class="widget-content text-info table-responsive">
                             <table class="table table-condensed table-striped">
                                 <thead>
                                     <tr>
                                         <th>Id</th>
                                         <th>Make</th>
                                         <th>Model</th>
+                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -41,6 +34,7 @@
                                         <td>{{p.Id}}</td>
                                         <td>{{p.Make}}</td>
                                         <td>{{p.Model}}</td>
+                                        <td><i class="fa fa-trash-o" style="cursor: pointer" ng-click="removecartype(p.Id)"></i></td>
                                     </tr>
                                 </tbody>
                             </table>
