--- a/AppPundits.ParkingApp/app/settings/addcartype.html
+++ b/AppPundits.ParkingApp/app/settings/addcartype.html
@@ -1,7 +1,7 @@
 ﻿<form role="form" data-toggle="validator">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Add Car Type</h4>
+        <h4 class="modal-title">{{dialogtitle}}</h4>
     </div>
     <div class="modal-body">
         <div class="form-group">
