--- a/AppPundits.ParkingApp/index.html
+++ b/AppPundits.ParkingApp/index.html
@@ -5,7 +5,7 @@
         /* This helps the ng-show/ng-hide animations start at the right place. */
         /* Since Angular has this but needs to load, this gives us the class early. */
         .ng-hide {
-            display: none!important;
+            display: none !important;
         }
     </style>
     <title data-ng-bind="title">Prime Parking</title>
@@ -29,6 +29,7 @@
     <link href="content/toastr.css" rel="stylesheet" />
     <link href="content/customtheme.css" rel="stylesheet">
     <link href="content/styles.css" rel="stylesheet" />
+    <link href="Content/bootstrap-datetimepicker.min.css" rel="stylesheet" />
 </head>
 <body>
     <div>
@@ -58,6 +59,7 @@
     <script src="scripts/moment.js"></script>
     <script src="scripts/ui-bootstrap-tpls-0.10.0.js"></script>
     <script src="scripts/spin.js"></script>
+    <script src="scripts/bootstrap-datetimepicker.min.js"></script>
 
     <!-- app -->
     <script src="app/all.min.js"></script>
