--- a/AppPundits.ParkingApp/app/settings/settings.html
+++ b/AppPundits.ParkingApp/app/settings/settings.html
@@ -1,10 +1,10 @@
 ﻿<section id="settings-view" class="mainbar" data-ng-controller="settings">
     <script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
-            <h3 class="modal-title">Are you sure?</h3>
+            <h3 class="modal-title">{{title}}</h3>
         </div>
         <div class="modal-body">
-            <p>Do you want to delete the car type?</p>
+            <p>{{message}}</p>
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
@@ -14,37 +14,11 @@
     <section class="matter">
         <div class="container">
             <div class="row">
+                <div class="col-md-4">
+                    <div data-ng-include="'/app/settings/cartypes.html'"></div>
+                </div>
                 <div class="col-md-6">
-                    <div class="widget wviolet">
-                        <button type="button" class="btn btn-info btn-lg" ng-click="openaddcar()">Add Car Type</button>
-                        <div data-cc-widget-header title="Car Types">
-                        </div>
-                        <div class="widget-content text-info table-responsive">
-                            <table class="table table-condensed table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Make</th>
-                                        <th>Model</th>
-                                        <th></th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr data-ng-repeat="p in cartypes">
-                                        <td>{{p.Id}}</td>
-                                        <td>{{p.Make}}</td>
-                                        <td>{{p.Model}}</td>
-                                        <td><i class="fa fa-pencil-square" style="cursor: pointer" ng-click="editcartype(p)"></i></td>
-                                        <td><i class="fa fa-trash-o" style="cursor: pointer" ng-click="removecartype(p)"></i></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="widget-foot">
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
+                    <div data-ng-include="'/app/settings/parkingbuildings.html'"></div>
                 </div>
             </div>
         </div>
