--- a/AppPundits.ParkingApp/app/dashboard/dashboard.html
+++ b/AppPundits.ParkingApp/app/dashboard/dashboard.html
@@ -36,9 +36,11 @@
                 </div>
             </div>
             <div class="row">
+                <button type="button" class="btn btn-info btn-lg" ng-click="addinfringement()">Add Infringement</button>
+            </div>
+            <div class="row">
                 <!--<div class="col-md-6">-->
                 <div class="widget wviolet">
-                    <button type="button" class="btn btn-info btn-lg" ng-click="addinfringement()">Add Infringement</button>
                     <div data-cc-widget-header title="Infringement">
                     </div>
                     <div class="widget-content text-info">
