--- a/AppPundits.ParkingApp/index.html
+++ b/AppPundits.ParkingApp/index.html
@@ -29,7 +29,7 @@
     <link href="content/toastr.css" rel="stylesheet" />
     <link href="content/customtheme.css" rel="stylesheet">
     <link href="content/styles.css" rel="stylesheet" />
-    <link href="Content/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+    <link href="Content/datatables.bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <div>
@@ -50,7 +50,8 @@
 
     <!-- Vendor Scripts -->
     <script src="scripts/jquery-2.1.1.js"></script>
-    <script src="scripts/angular.js"></script>
+    <script src="scripts/jquery.dataTables.min.js"></script>
+    <script src="scripts/angular.min.js"></script>
     <script src="scripts/angular-animate.js"></script>
     <script src="scripts/angular-route.js"></script>
     <script src="scripts/angular-sanitize.js"></script>
@@ -59,7 +60,8 @@
     <script src="scripts/moment.js"></script>
     <script src="scripts/ui-bootstrap-tpls-0.10.0.js"></script>
     <script src="scripts/spin.js"></script>
-    <script src="scripts/bootstrap-datetimepicker.min.js"></script>
+    <script src="scripts/angular-datatables.min.js"></script>
+    <script src="scripts/angular-datatables.bootstrap.min.js"></script>
 
     <!-- app -->
     <script src="app/all.min.js"></script>
