--- a/AppPundits.ParkingApp/app/dashboard/manageinfringement.html
+++ b/AppPundits.ParkingApp/app/dashboard/manageinfringement.html
@@ -13,9 +13,11 @@
         <div class="form-group">
             <label for="carmake" class="col-sm-3 control-label">Car Make:</label>
             <div class="col-sm-9">
-                <select id="carmake" ng-model="infringement.CarMake" class="form-control" required>
+                <input type="text" name="carmake" list="carMakers" ng-model="infringement.CarMake"
+                       class="form-control" required />
+                <datalist id="carMakers">
                     <option ng-repeat="type in cartypes">{{type.Make}}</option>
-                </select>
+                </datalist>
             </div>
         </div>
         <div class="form-group">
@@ -25,11 +27,11 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="parkingbuilding" class="col-sm-3 control-label">Parking Building:</label>
+            <label for="parkingbuildingCntrl" class="col-sm-3 control-label">Parking Building:</label>
             <div class="col-sm-9">
                 <select ng-model="infringement.ParkingBuilding"
-                        ng-options="parking.StreetName for parking in parkingbuildings"
-                        id="parkingbuilding" class="form-control" required></select>
+                        ng-options="parking.BuildingName for parking in parkingbuildings"
+                        id="parkingbuildingCntrl" class="form-control" required></select>
                 <!--<select ng-model="infringement.ParkingBuilding" id="parkingbuilding" class="form-control" required>
                     <option ng-repeat="building in parkingbuildings" value="{{building.Id}}">{{building.StreetName}}</option>
                 </select>-->
@@ -48,19 +50,19 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="offense" class="col-sm-3 control-label">Offense Type:</label>
+            <label for="offenseCntrl" class="col-sm-3 control-label">Offense Type:</label>
             <div class="col-sm-9">
-                <select ng-model="infringement.Offense" id="offense" class="form-control" required>
-                    <option>Test1</option>
-                </select>
+                <select ng-model="infringement.Offense"
+                        ng-options="offense.Description for offense in offenses"
+                        id="offenseCntrl" class="form-control" ng-change="assignOffenseAmount(offense)" required></select>
             </div>
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
             <label for="breachdate" class="col-sm-3 control-label">Date:</label>
             <div class="col-sm-9">
                 <input type="datetime-local" ng-model="infringement.BreachDate" class="form-control" id="breachdate" required />
             </div>
-        </div>
+        </div>-->
         <div class="form-group">
             <label for="offenseamount" class="col-sm-3 control-label">Amount:</label>
             <div class="col-sm-9">
@@ -76,7 +78,7 @@
         <div class="form-group">
             <label for="datepaid" class="col-sm-3 control-label">Date Paid:</label>
             <div class="col-sm-9">
-                <input type="datetime-local" name="bday" class="form-control">
+                <input type="date" id="datepaid" class="form-control" ng-model="infringement.Transaction.PaidDate">
             </div>
         </div>
         <div class="form-group">
