--- a/AppPundits.ParkingApp/app/settings/offenses.html
+++ b/AppPundits.ParkingApp/app/settings/offenses.html
@@ -1,26 +1,28 @@
-﻿<div ng-controller="cartypes">
+﻿<div ng-controller="offenses">
     <div>
-        <button type="button" class="btn btn-info btn-lg" ng-click="openaddcar()">Add Car Type</button>
+        <button type="button" class="btn btn-info btn-lg" ng-click="add()">Add Offense</button>
     </div>
     <div class="widget wviolet">
-        <div data-cc-widget-header title="Car Types">
+        <div data-cc-widget-header title="Offenses">
         </div>
         <div class="widget-content text-info table-responsive">
             <table class="table table-condensed table-striped">
                 <thead>
                     <tr>
                         <th>Id</th>
-                        <th>Make</th>
+                        <th>Description</th>
+                        <th>Fine Amount</th>
                         <th></th>
                         <th></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr data-ng-repeat="p in cartypes">
+                    <tr data-ng-repeat="p in offenses">
                         <td>{{p.Id}}</td>
-                        <td>{{p.Make}}</td>
-                        <td><i class="fa fa-pencil-square" style="cursor: pointer" ng-click="editcartype(p)"></i></td>
-                        <td><i class="fa fa-trash-o" style="cursor: pointer" ng-click="removecartype(p)"></i></td>
+                        <td>{{p.Description}}</td>
+                        <td>{{p.FineAmount}}</td>
+                        <td><i class="fa fa-pencil-square" style="cursor: pointer" ng-click="edit(p)"></i></td>
+                        <td><i class="fa fa-trash-o" style="cursor: pointer" ng-click="remove(p)"></i></td>
                     </tr>
                 </tbody>
             </table>
