--- a/AppPundits.ParkingApp/app/settings/settings.html
+++ b/AppPundits.ParkingApp/app/settings/settings.html
@@ -20,6 +20,9 @@
                 <div class="col-md-6">
                     <div data-ng-include="'/app/settings/parkingbuildings.html'"></div>
                 </div>
+                <div class="col-md-4">
+                    <div data-ng-include="'/app/settings/offenses.html'"></div>
+                </div>
             </div>
         </div>
     </section>
